[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragdrag"
version = "0.1.0"
description = "RAG pipeline security testing toolkit. Fingerprint, probe, and assess RAG systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "McKern3l" },
]
keywords = ["rag", "security", "red-team", "penetration-testing", "ai-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
ragdrag = "ragdrag.cli:cli"

[project.urls]
Homepage = "https://github.com/McKern3l/RAGdrag"
Repository = "https://github.com/McKern3l/RAGdrag"

[tool.setuptools.packages.find]
include = ["ragdrag*"]

[tool.setuptools.package-data]
ragdrag = ["payloads/**/*.json"]

# Tests live in the ragdrag-labs repo: github.com/McKern3l/RAGdrag-labs
